--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A BrAPI-powered bulk germplasm search API server and website",
   "main": "src/index.js",
   "scripts": {
+    "server": "node src/server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,6 +26,8 @@
   "dependencies": {
     "@solgenomics/brapijs": "^1.0.1",
     "deep-extend": "^0.6.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "md5": "^2.2.1",
+    "memory-cache": "^0.2.0"
   }
 }
