--- a/config.json
+++ b/config.json
@@ -2,6 +2,8 @@
     "port": 3000,
     "cache": {
         "timeout": 1209600000,
-        "export": "./cache.json"
+        "export": "./cache.json",
+        "autoImport": true,
+        "autoExport": true
     }
 }
