--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "deep-extend": "^0.6.0",
     "express": "^4.17.1",
     "md5": "^2.2.1",
-    "memory-cache": "^0.2.0"
+    "memory-cache": "^0.2.0",
+    "uuid": "^8.0.0"
   }
 }
