--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "src/index.js",
   "scripts": {
     "server": "node src/server/index.js",
+    "start": "npm run server",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "bin": {
+    "brapi-germplasm-search": "node ./src/server/index.js"
   },
   "repository": {
     "type": "git",
