--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "homepage": "https://github.com/TriticeaeToolbox/BrAPI-germplasm-search#readme",
   "dependencies": {
-    "@solgenomics/brapijs": "^1.0.1",
+    "@solgenomics/brapijs": "github:solgenomics/BrAPI-js#v2.0.0",
     "deep-extend": "^0.6.0",
     "express": "^4.17.1",
     "md5": "^2.2.1",
