Cache: change to persistent-cache which uses separate files for each server, to help reduce the memory load

--- a/config.json
+++ b/config.json
@@ -27,10 +27,11 @@
         }
     ],
     "cache": {
-        "timeout": 1209600000,
-        "export": "./cache.json",
-        "autoImport": true,
-        "autoExport": true
+        "base": "_cache",
+        "name": "servers",
+        "duration": 1209600000,
+        "memory": true,
+        "persist": true
     },
     "search": {
         "database_terms": {
