--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "@solgenomics/brapijs": "github:solgenomics/BrAPI-js#v2.0.0",
     "deep-extend": "^0.6.0",
     "express": "^4.17.1",
-    "md5": "^2.2.1",
-    "memory-cache": "^0.2.0",
+    "md5": "^2.3.0",
+    "persistent-cache": "^1.1.1",
     "uuid": "^8.0.0"
   }
 }
