--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "server": "node src/server/index.js",
     "start": "npm run server",
+    "update": "node -e 'require(\"./src/utils/cache_update.js\")()'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
@@ -29,10 +30,12 @@
   "homepage": "https://github.com/TriticeaeToolbox/BrAPI-germplasm-search#readme",
   "dependencies": {
     "@solgenomics/brapijs": "github:solgenomics/BrAPI-js#v2.0.0",
+    "cli-progress": "^3.9.1",
     "deep-extend": "^0.6.0",
     "express": "^4.17.1",
     "flat": "^5.0.2",
     "md5": "^2.3.0",
+    "node-cron": "^3.0.0",
     "persistent-cache": "^1.1.1",
     "trie-prefix-tree": "^1.5.1",
     "uuid": "^8.0.0"
